RESULTS/AutoSpec/raw_results/out-4o-oopsla-mx/out/09_0002/09_merged.txt
/home/dimpling/AutoSpec/out/09_0002/09_merged.c:46:3: error: unterminated comment
   46 |   /*@;
      |   ^
